import { snapshotTest } from 'testing';

describe('Ranting demo snapshot', () => {
  snapshotTest('Skeleton');
});
