// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Ranting demo snapshot > Skeleton demo snapshot 0 1`] = `
<div>
  <div
    class="bui-stack"
    style="--align-items: center; --justify-content: center; --flex-direction: column; --spacing: 0; --flex-wrap: nowrap;"
  >
    <span
      class="bui-skeleton bui-skeleton-text bui-skeleton-animation-wave"
      style="width: 210px;"
    />
    <span
      class="bui-skeleton bui-skeleton-text bui-skeleton-animation-wave"
      style="width: 240px;"
    />
  </div>
</div>
`;

exports[`Ranting demo snapshot > Skeleton demo snapshot 0 2`] = `
<div>
  <div
    class="bui-stack"
    style="--align-items: center; --justify-content: center; --flex-direction: column; --spacing: 10px; --flex-wrap: nowrap;"
  >
    <span
      class="bui-skeleton bui-skeleton-text bui-skeleton-animation-wave"
      style="width: 210px;"
    />
    <span
      class="bui-skeleton bui-skeleton-circular bui-skeleton-animation-wave"
      style="width: 48px; height: 48px;"
    />
    <span
      class="bui-skeleton bui-skeleton-rectangular bui-skeleton-animation-wave"
      style="width: 210px; height: 40px;"
    />
    <span
      class="bui-skeleton bui-skeleton-rounded bui-skeleton-animation-wave"
      style="width: 210px; height: 40px;"
    />
  </div>
</div>
`;

exports[`Ranting demo snapshot > Skeleton demo snapshot 0 3`] = `
<div>
  <div
    class="bui-stack"
    style="--align-items: center; --justify-content: center; --flex-direction: column; --spacing: 0; --flex-wrap: nowrap;"
  >
    <span
      class="bui-skeleton bui-skeleton-text bui-skeleton-animation-wave"
      style="width: 210px;"
    />
    <span
      class="bui-skeleton bui-skeleton-text bui-skeleton-animation-pulse"
      style="width: 210px;"
    />
    <span
      class="bui-skeleton bui-skeleton-text"
      style="width: 210px;"
    />
  </div>
</div>
`;

exports[`Ranting demo snapshot > Skeleton demo snapshot 0 4`] = `
<div>
  <div
    class="bui-stack"
    style="--align-items: center; --justify-content: center; --flex-direction: column; --spacing: 0; --flex-wrap: nowrap;"
  >
    <div
      style="display: flex; align-items: center; margin-bottom: 12px;"
    >
      <span
        class="bui-skeleton bui-skeleton-circular bui-skeleton-animation-wave"
        style="width: 48px; height: 48px; margin: 0px 6px 0px 0px;"
      />
      <div>
        <span
          class="bui-skeleton bui-skeleton-text bui-skeleton-animation-wave"
          style="width: 210px;"
        />
        <span
          class="bui-skeleton bui-skeleton-text bui-skeleton-animation-wave"
          style="width: 210px;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Ranting demo snapshot > Skeleton demo snapshot 0 5`] = `
<div>
  <div
    class="bui-stack"
    style="--align-items: center; --justify-content: center; --flex-direction: column; --spacing: 10px; --flex-wrap: nowrap;"
  >
    <span
      class="bui-skeleton bui-skeleton-circular bui-skeleton-animation-wave bui-skeleton-with-children"
    >
      <div
        style="height: 80px; width: 80px;"
      />
    </span>
    <span
      class="bui-skeleton bui-skeleton-circular bui-skeleton-animation-wave bui-skeleton-with-children"
    >
      <div
        style="height: 100px; width: 100px;"
      />
    </span>
  </div>
</div>
`;
